@@ -1,7 +1,7 @@
 #!/usr/bin/env python
 import os
 from trytond.pool import Pool
-from trytond.modules.coog_core import batch
+from trytond.modules.coog_core import batch, queue
 from trytond.transaction import Transaction
 
 database = os.environ.get('DB_NAME', None)
@@ -10,5 +10,6 @@ with Transaction().start(database, 0, readonly=True):
     pool = Pool()
     pool.init()
     for name, kls in pool.iterobject():
-        if issubclass(kls, batch.BatchRoot):
+        if issubclass(kls, batch.BatchRoot) or issubclass(kls,
+                queue.QueueMixin):
             print name
