@@ -278,7 +278,7 @@ New Endorsement::
     >>> new_endorsement.execute('suspend')
     >>> good_endorsement, = Endorsement.find([
     ...         ('contracts', '=', contract.id)])
-    >>> _ = Endorsement.apply([good_endorsement.id], config._context)
+    >>> _ = Endorsement.apply_synchronous([good_endorsement.id], config._context)
     >>> contract = Contract(contract.id)
     >>> contract.start_date == new_contract_start_date
     True
