@@ -183,7 +183,7 @@ contract.start_date == contract_start_date
 # #Res# #True
 contract.options[0].start_date == contract_start_date
 # #Res# #True
-_ = Endorsement.apply([good_endorsement.id], config._context)
+_ = Endorsement.apply_synchronous([good_endorsement.id], config._context)
 contract = Contract(contract.id)
 contract.start_date == new_contract_start_date
 # #Res# #True
@@ -199,7 +199,7 @@ contract.options[0].start_date == contract_start_date
 # #Comment# #Test options restauration
 good_endorsement.state = 'draft'
 good_endorsement.save()
-_ = Endorsement.apply([good_endorsement.id], config._context)
+_ = Endorsement.apply_synchronous([good_endorsement.id], config._context)
 
 config = switch_user('admin')
 
