@@ -2,5 +2,5 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/group[@id='application']/group[@id='application_buttons']/button[@name='apply']" position="replace"/>
+    <xpath expr="/form/group[@id='application']/group[@id='application_buttons']/button[@name='apply_synchronous']" position="replace"/>
 </data>
