@@ -1,3 +1,4 @@
+* FEA#8212 Execution of heavy business treatment in asynchronous mode
 * OTH#0000 Fix client plugin linking in coog repo link
 * BUG#8683 RGPD: Remove anonymization of banks
 * BUG#8843 Force order in search_and_stream method
